# chws_tool

./: .editorconfig  .gitignore  Pipfile  README.md  precommit.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
references/: DelaGothicOne-Regular.ttf-glyphs  DelaGothicOne-Regular.ttf.G_P_O_S_.ttx.diff  DelaGothicOne-Regular.ttf.tables.diff  DotGothic16-Regular.ttf-glyphs  DotGothic16-Regular.ttf.G_P_O_S_.ttx.diff  DotGothic16-Regular.ttf.tables.diff  HachiMaruPop-Regular.ttf-glyphs  HachiMaruPop-Regular.ttf.G_P_O_S_.ttx.diff  HachiMaruPop-Regular.ttf.tables.diff  HinaMincho-Regular.ttf-glyphs  HinaMincho-Regular.ttf.G_P_O_S_.ttx.diff  HinaMincho-Regular.ttf.tables.diff  IBMPlexSansKR-Bold.ttf-glyphs  IBMPlexSansKR-Bold.ttf.tables.diff  IBMPlexSansKR-ExtraLight.ttf-glyphs  IBMPlexSansKR-ExtraLight.ttf.G_P_O_S_.ttx.diff  IBMPlexSansKR-ExtraLight.ttf.tables.diff  IBMPlexSansKR-Light.ttf.tables.diff  IBMPlexSansKR-Medium.ttf.G_P_O_S_.ttx.diff  IBMPlexSansKR-Medium.ttf.tables.diff  IBMPlexSansKR-Regular.ttf-glyphs  IBMPlexSansKR-Regular.ttf.G_P_O_S_.ttx.diff  IBMPlexSansKR-Regular.ttf.tables.diff  IBMPlexSansKR-SemiBold.ttf.tables.diff  IBMPlexSansKR-Thin.ttf-glyphs  IBMPlexSansKR-Thin.ttf.G_P_O_S_.ttx.diff  IBMPlexSansKR-Thin.ttf.tables.diff  KaiseiDecol-Bold.ttf.tables.diff  KaiseiDecol-Medium.ttf.tables.diff  KaiseiDecol-Regular.ttf.tables.diff  KaiseiHarunoUmi-Bold.ttf.tables.diff  KaiseiHarunoUmi-Medium.ttf.tables.diff  KaiseiHarunoUmi-Regular.ttf.tables.diff  KaiseiOpti-Bold.ttf-glyphs  KaiseiOpti-Bold.ttf.G_P_O_S_.ttx.diff  KaiseiOpti-Bold.ttf.tables.diff  KaiseiOpti-Medium.ttf.tables.diff  KaiseiOpti-Regular.ttf-glyphs  KaiseiOpti-Regular.ttf.G_P_O_S_.ttx.diff  KaiseiOpti-Regular.ttf.tables.diff  (+316 more)
scripts/: build-ref.sh
src/chws_tool/: __init__.py  add_chws.py  config.py
tests/: add_chws_test.py  config_test.py  conftest.py  test.html  test_add_chws.py  test_config.py
